Update for Vercel deployment: Update .env.example and add deployment guide

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,8 @@
-# Supabase 配置
-VITE_SUPABASE_PROJECT_ID=your_supabase_project_id
-VITE_SUPABASE_PUBLISHABLE_KEY=your_supabase_publishable_key
-VITE_SUPABASE_URL=https://your_project_id.supabase.co
-
 # 扣子 OAuth 配置
 VITE_COZE_USE_JWT=true
 VITE_COZE_CLIENT_ID=your_coze_client_id
 VITE_COZE_CLIENT_SECRET=your_coze_client_secret
-VITE_COZE_REDIRECT_URI=http://localhost:8082/oauth/callback
+VITE_COZE_REDIRECT_URI=https://your-vercel-domain.vercel.app/oauth/callback
 VITE_COZE_BOT_ID=your_bot_id
 VITE_COZE_USER_ID=user_123
 VITE_COZE_NICKNAME=用户
