--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,10 @@ VITE_COZE_NICKNAME=用户
 # 扣子 API Key 配置（备用方案）
 VITE_COZE_API_KEY=your_coze_api_key
 
+# Moonshot API 配置（用于生成解读报告卡）
+VITE_MOONSHOT_API_KEY=your_moonshot_api_key
+VITE_MOONSHOT_MODEL=kimi-k2-0905-preview
+VITE_MOONSHOT_BASE_URL=https://api.moonshot.cn/v1
+
 # 生产环境标识
 VITE_NODE_ENV=production
