Fix Vercel timeout: add 300s maxDuration for functions

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,14 @@
       }
     }
   ],
+  "functions": {
+    "app/api/**/*.js": {
+      "maxDuration": 300
+    },
+    "**/*.js": {
+      "maxDuration": 300
+    }
+  },
 
   "routes": [
     {
