--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
+# Supabase 配置
+VITE_SUPABASE_PROJECT_ID=your_supabase_project_id
+VITE_SUPABASE_PUBLISHABLE_KEY=your_supabase_publishable_key
+VITE_SUPABASE_URL=https://your-project.supabase.co
+
 # 扣子 OAuth 配置
-VITE_COZE_USE_JWT=true
+VITE_COZE_USE_JWT=false
 VITE_COZE_CLIENT_ID=your_coze_client_id
 VITE_COZE_CLIENT_SECRET=your_coze_client_secret
 VITE_COZE_REDIRECT_URI=https://your-vercel-domain.vercel.app/oauth/callback
@@ -9,6 +14,7 @@ VITE_COZE_NICKNAME=用户
 
 # 扣子 API Key 配置（备用方案）
 VITE_COZE_API_KEY=your_coze_api_key
+VITE_COZE_API_TOKEN=your_coze_api_token
 
 # Moonshot API 配置（用于生成解读报告卡）
 VITE_MOONSHOT_API_KEY=your_moonshot_api_key
